modified:   NAMESPACE 	modified:   R/epi_stats.R 	modified:   R/survival.R 	modified:   R/table1.R 	modified:   README.md 	new file:   Rplots.pdf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,4 +29,9 @@ export(univariate_categorical_plot)
 export(univariate_cont_plot)
 export(univariate_continuous_plot)
 export(univariate_plot)
+export(kk_table1)
+export(kk_epi_2x2)
+export(kk_diagnostic)
+export(kk_risk_plot)
+export(kk_survival_plot)
 importFrom(dplyr,"%>%")
