modified:   DESCRIPTION 	modified:   NAMESPACE 	modified:   R/plotting.R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,20 +14,32 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-Imports: 
+Depends: 
     dplyr,
     tidyr,
     tibble,
     ggplot2,
     forcats,
     purrr,
-    rlang,
     janitor,
+    survival,
+    gtsummary,
+    ggsurvfit,
+    broom,
+    rstatix,
+    easystats,
+    patchwork,
+    haven,
+    readxl,
+    modelsummary,
+    tidymodels,
+    marginaleffects
+Imports: 
+    rlang,
     stats,
     utils,
     emmeans,
     sandwich,
-    broom,
     sysfonts,
     ggthemes,
     scales,
@@ -37,30 +49,19 @@ Imports:
     rugarch,
     pROC,
     MASS,
-    gtsummary,
-    survival,
-    ggsurvfit,
     epitools,
-    haven,
-    readxl,
     tinytable,
-    modelsummary,
     brms,
     quantreg,
-    tidymodels,
-    marginaleffects,
     brglm2,
-    rstatix,
     finalfit,
     nortest,
     forecast,
     ggstats,
-    patchwork,
     monochromeR,
     showtext,
     MKinfer,
     epiR,
-    easystats,
     detectseparation,
     pracma,
     zoo
