--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(kk_diagnostic)
 export(kk_epi_2x2)
 export(kk_reg)
 export(kk_risk_plot)
+export(kk_setup)
 export(kk_summary)
 export(kk_survival_plot)
 export(kk_table1)
