modified:   NAMESPACE 	modified:   R/epi_stats.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,12 @@ export(compare_proportions_kk_glm)
 export(comprehensive_summary)
 export(confusion_metrics_ci)
 export(diagnostic_summary)
-export(epi_stats)
+export(kk_epi_stats)
 export(extract_age_from_egn)
 export(extract_egn_info)
 export(format_tibble)
 export(kk_diagnostic)
-export(kk_epi_2x2)
+export(kk_twobytwo)
 export(kk_reg)
 export(kk_risk_plot)
 export(kk_setup)
