modified:   NAMESPACE modified:   R/confusion_matrix.R modified:   R/plotting.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(compare_proportions_kk_glm)
 export(comprehensive_summary)
 export(confusion_metrics_ci)
 export(diagnostic_summary)
+export(kk_confusion_matrix)
 export(kk_epi_stats)
 export(extract_age_from_egn)
 export(extract_egn_info)
