modified:   NAMESPACE 	new file:   R/advanced_epi.R 	new file:   tests/verify_advanced_epi.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,17 +10,22 @@ export(diagnostic_summary)
 export(extract_age_from_egn)
 export(extract_egn_info)
 export(format_tibble)
+export(kk_agreement)
 export(kk_confusion_matrix)
 export(kk_diagnostic)
 export(kk_epi_stats)
+export(kk_mcnemar)
 export(kk_reg)
 export(kk_risk_plot)
+export(kk_sensitivity_analysis)
 export(kk_setup)
+export(kk_stratified_2x2)
 export(kk_summary)
 export(kk_survival_plot)
 export(kk_table1)
 export(kk_time_metrics)
 export(kk_time_series)
+export(kk_trend_test)
 export(kk_twobytwo)
 export(kkonehot)
 export(kkplot)
